# FishBot-IDF-MyDemo

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/IIC/: myi2c.c  myi2c.h
components/BSP/LED/: led.c  led.h
components/BSP/MOTOR/: motor.c  motor.h  pid_controller.h  rotary_encoder.h  rotary_encoder_pcnt_ec11.c
components/BSP/MPU6050/: mpu6050.c  mpu6050.h
components/BSP/OLED/: oled.c  oled.h
components/LIB/: CMakeLists.txt
components/LIB/KINEMATICS/: kinematics_diff4.c  kinematics_diff4.h
components/LIB/PWM/: pwm.c  pwm.h
main/: CMakeLists.txt  global_config.h  main.c  main_bak.c
